force-app/main/default/objects/DMS_File_Transfer__e/DMS_File_Transfer__e.object-meta.xml
<CustomObject>
    <label>DMS File Transfer</label>
    <pluralLabel>DMS File Transfer</pluralLabel>
</CustomObject>