force-app/main/default/objects/DMS_File_Transfer__e/fields/ABFL_Index_Map__c.field-meta.xml
<CustomField>
    <fullName>ABFL_Index_Map__c</fullName>
    <description>Used to index map required by DMS</description>
    <label>ABFL Index Map</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>