force-app/main/default/objects/DMS_File_Transfer__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>CaseNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>