force-app/main/default/objects/DMS_File_Transfer__e/fields/CategoryID__c.field-meta.xml
<CustomField>
    <fullName>CategoryID__c</fullName>
    <description>Added as a part of ABHI for Omnidoc upload</description>
    <label>CategoryID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>