force-app/main/default/objects/DMS_File_Transfer__e/fields/ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>ContentVersionId__c</fullName>
    <label>ContentVersionId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>