force-app/main/default/objects/DMS_File_Transfer__e/fields/Customer_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Client_Code__c</fullName>
    <label>Customer Client Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>