force-app/main/default/objects/DMS_File_Transfer__e/fields/DMS_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_External_ID__c</fullName>
    <label>DMS External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>