force-app/main/default/objects/DMS_File_Transfer__e/fields/DMS_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_Folder_Id__c</fullName>
    <label>DMS Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>