force-app/main/default/objects/DMS_File_Transfer__e/fields/Doc_SubType__c.field-meta.xml
<CustomField>
    <fullName>Doc_SubType__c</fullName>
    <label>Doc SubType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>