force-app/main/default/objects/DMS_File_Transfer__e/fields/Docgroup_Type__c.field-meta.xml
<CustomField>
    <fullName>Docgroup_Type__c</fullName>
    <label>Docgroup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>