force-app/main/default/objects/DMS_File_Transfer__e/fields/DocSearchParamId__c.field-meta.xml
<CustomField>
    <fullName>DocSearchParamId__c</fullName>
    <label>DocSearchParamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>