force-app/main/default/objects/DMS_File_Transfer__e/fields/IssueTypeCode__c.field-meta.xml
<CustomField>
    <fullName>IssueTypeCode__c</fullName>
    <label>IssueTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>