force-app/main/default/objects/DMS_File_Transfer__e/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>