force-app/main/default/objects/DMS_File_Transfer__e/fields/LogicalID__c.field-meta.xml
<CustomField>
    <fullName>LogicalID__c</fullName>
    <label>LogicalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>