force-app/main/default/objects/DMS_File_Transfer__e/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>