force-app/main/default/objects/DMS_File_Transfer__e/fields/ReferenceID__c.field-meta.xml
<CustomField>
    <fullName>ReferenceID__c</fullName>
    <label>ReferenceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>