force-app/main/default/objects/DMS_File_Transfer__e/fields/TaskID__c.field-meta.xml
<CustomField>
    <fullName>TaskID__c</fullName>
    <label>TaskID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>