force-app/main/default/objects/DMS_File_Transfer__e/fields/TODID__c.field-meta.xml
<CustomField>
    <fullName>TODID__c</fullName>
    <label>TODID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>